# Openenv-Hack

./: .gitignore  Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
git_merge_conflict_env/: __init__.py  client.py  models.py
git_merge_conflict_env/server/: app.py  conflict_generator.py  environment.py  grader.py
server/: app.py
